// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "isMobile": false,
  "lang": "en_US",
  "theme": "day",
}
`;

exports[`2- location change. should change filter and tag 1`] = `
Object {
  "isMobile": false,
  "lang": "en_US",
  "theme": "day",
}
`;

exports[`3- theme change 1`] = `
Object {
  "isMobile": false,
  "lang": "en_US",
  "theme": "night",
}
`;

exports[`4- Set lang act 1`] = `
Object {
  "isMobile": false,
  "lang": "tr-TR",
  "theme": "night",
}
`;
